--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  HELM_VERSION: v3.10.1
+  HELM_VERSION: v3.11.1
 
 jobs:
   k8s-conformance-e2e:
@@ -830,14 +830,16 @@ jobs:
           sudo cp -r /root/.kube/ ~/.kube/
           sudo chown -R $(id -un). ~/.kube/
 
-      - name: Install Kube-OVN
+      - name: Install Kube-OVN with Cilium chaining
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          VERSION=$version make kind-install
+          VERSION=$version make kind-install-cilium-chaining
 
       - name: Run E2E
+        env:
+          E2E_CILIUM_CHAINING: "true"
         run: make k8s-conformance-e2e
 
       - name: Cleanup
