--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -594,6 +594,9 @@ jobs:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
 
+      - name: Export Go full version
+        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
+
       - name: Go cache
         uses: actions/cache/restore@v3
         with:
