chart: add variable restart_ovs

--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -1005,8 +1005,8 @@ jobs:
 
       - name: Parse versions
         run: |
-          version_from=$(echo ${{ matrix.case }} | awk '{print $1}')
-          version_to=$(echo ${{ matrix.case }} | awk '{print $3}')
+          version_from=$(echo '${{ matrix.case }}' | awk '{print $1}')
+          version_to=$(echo '${{ matrix.case }}' | awk '{print $3}')
           echo "VERSION_FROM=$version_from" >> "$GITHUB_ENV"
           echo "VERSION_TO=$version_to" >> "$GITHUB_ENV"
 
@@ -1054,7 +1054,16 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          VERSION=$version make kind-upgrade-chart
+
+          restart_ovs=false
+          v1=$(printf "$VERSION_FROM\\nrelease-1.11" | sort -Vr | head -n1)
+          v2=$(printf "$VERSION_TO\\nrelease-1.12" | sort -Vr | head -n1)
+          if [ $v1 = "release-1.11" ]; then
+            if [ $VERSION_TO = "master" -o $VERSION_TO = $v2 ]; then
+              restart_ovs=true
+            fi
+          fi
+          CHART_UPGRADE_RESTART_OVS=$restart_ovs VERSION=$version make kind-upgrade-chart
 
       - name: Run E2E
         env:
