--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -170,3 +170,12 @@ kube-ovn-kubevirt-e2e:
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all --always-emit-ginkgo-writer \
 		--focus=CNI:Kube-OVN ./test/e2e/kubevirt/kubevirt.test
+
+.PHONY: kube-ovn-webhook-e2e
+kube-ovn-webhook-e2e:
+	ginkgo build ./test/e2e/webhook
+	E2E_BRANCH=$(E2E_BRANCH) \
+	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
+	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
+	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all --always-emit-ginkgo-writer \
+		--focus=CNI:Kube-OVN ./test/e2e/webhook/webhook.test
