--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -11,6 +11,7 @@ concurrency:
 
 env:
   HELM_VERSION: v3.11.1
+  SUBMARINER_VERSION: v0.13.4
 
 jobs:
   k8s-conformance-e2e:
@@ -1217,9 +1218,6 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.11
-          - release-1.10
-          - release-1.9
     steps:
       - uses: actions/checkout@v3
 
@@ -1239,10 +1237,10 @@ jobs:
           install_only: true
 
       - name: Install submariner subctl
-        run: |
-          curl -Ls https://get.submariner.io | VERSION=v0.13.4 bash
-          sudo chmod +x ~/.local/bin/subctl
-          sudo mv ~/.local/bin/subctl /usr/bin/
+        env:
+          VERSION: ${{ env.SUBMARINER_VERSION }}
+          DESTDIR: /usr/local/bin
+        run: curl -Ls https://get.submariner.io | bash
 
       - name: Create kind cluster
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
