--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -179,3 +179,7 @@ kube-ovn-webhook-e2e:
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
 	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all --always-emit-ginkgo-writer \
 		--focus=CNI:Kube-OVN ./test/e2e/webhook/webhook.test
+
+.PHONY: kubectl-ko-log
+kubectl-ko-log:
+	kubectl ko log all all all
