--- a/.github/workflows/build-kube-ovn-test.yaml
+++ b/.github/workflows/build-kube-ovn-test.yaml
@@ -12,6 +12,7 @@ jobs:
         with:
           go-version-file: go.mod
           check-latest: true
+          cache: false
 
       - name: Build
         run: make image-test
