--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -79,6 +79,7 @@ jobs:
         with:
           go-version-file: go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -209,6 +210,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -241,6 +243,7 @@ jobs:
         with:
           go-version-file: go.mod
           check-latest: true
+          cache: false
 
       - name: Generate path filter
         run: |
@@ -311,6 +314,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -414,6 +418,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -513,6 +518,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -679,6 +685,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -768,6 +775,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -996,6 +1004,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -1086,6 +1095,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -1166,6 +1176,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -1297,6 +1308,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
@@ -1398,6 +1410,7 @@ jobs:
         with:
           go-version-file: ${{ env.E2E_DIR }}/go.mod
           check-latest: true
+          cache: false
 
       - name: Export Go full version
         run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
