add distribute gateway test for submariner

--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -1229,6 +1229,9 @@ jobs:
       matrix:
         branch:
           - master
+        gateway:
+          - distributed
+          - centralized
     steps:
       - uses: actions/checkout@v3
 
@@ -1270,7 +1273,7 @@ jobs:
           VERSION=$version make kind-install-ovn-submariner
 
       - name: Run E2E
-        run: make kube-ovn-submariner-conformance-e2e
+        run: make kube-ovn-submariner-conformance-e2e-${{ matrix.gateway }}-gateway
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
