--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -1270,10 +1270,10 @@ jobs:
         run: |
           version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
           docker pull kubeovn/kube-ovn:$version
-          VERSION=$version make kind-install-ovn-submariner
+          VERSION=$version make kind-install-ovn-submariner-${{ matrix.gateway }}-gateway
 
       - name: Run E2E
-        run: make kube-ovn-submariner-conformance-e2e-${{ matrix.gateway }}-gateway
+        run: make kube-ovn-submariner-conformance-e2e
 
       - name: Cleanup
         working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
