optimize ovs upgrade script

--- a/kubeovn-helm/templates/post-upgrade.yaml
+++ b/kubeovn-helm/templates/post-upgrade.yaml
@@ -54,6 +54,11 @@ spec:
       containers:
         - name: post-upgrade-job
           image: "{{ .Values.global.registry.address}}/{{ .Values.global.images.kubeovn.repository }}:{{ .Values.global.images.kubeovn.tag }}"
+          env:
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           command:
             - sh
             - -c
