--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -5,7 +5,7 @@ permissions:
   pull-requests: write
 
 on:
-  pull_request:
+  pull_request_target:
     branches:
       - master
       - release-*
