fix update dnat rules not effect correctly

--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -424,6 +424,14 @@ spec:
                   type: string
                 redo:
                   type: string
+                protocol:
+                  type: string
+                internalIp:
+                  type: string
+                internalPort:
+                  type: string
+                externalPort:
+                  type: string
                 conditions:
                   type: array
                   items:
